// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot of JSON parsing logic Archaeology.json 1`] = `
Array [
  Object {
    "aL": "Archeology",
    "bt": Array [
      "sh85005581",
      "sh85010480",
      "sh85061212",
    ],
    "lcc": "CC",
    "note": "Here are entered works on archaeology as a branch of learning. This heading may be divided geographically for works on this branch of learning in a specific place. Works on the antiquities of particular regions, countries, cities, etc. are entered under the name of the place subdivided by [Antiquities.]",
    "nt": Array [
      "sh95000886",
      "sh2009004421",
      "sh85116926",
      "sh85101308",
      "sh85079786",
      "sh85065824",
      "sh85027024",
      "sh85048843",
      "sh85097895",
      "sh00007440",
      "sh85072567",
      "sh85018080",
      "sh85093636",
      "sh95000887",
      "sh85087721",
      "sh85127907",
      "sh85109300",
      "sh85107780",
      "sh85034228",
      "sh85001256",
      "sh85061115",
      "sh91002758",
      "sh2015002234",
      "sh85126368",
      "sh2003009064",
      "sh2003003476",
      "sh2012004635",
      "sh2013001303",
      "sh85126691",
      "sh2021006222",
      "sh85066643",
      "sh85004685",
      "sh2009002956",
      "sh2007006623",
      "sh94001190",
      "sh85134099",
      "sh2005001576",
      "sh85102008",
      "sh85114683",
      "sh2012000959",
      "sh85060817",
      "sh2012004636",
      "sh94008300",
      "sh85065024",
      "sh85006853",
      "sh2003004186",
      "sh85065958",
      "sh89002313",
      "sh89000928",
      "sh2013000143",
      "sh2003011000",
      "sh85050977",
      "sh2004001262",
      "sh85053066",
      "sh93006952",
      "sh85046105",
      "sh2021005077",
      "sh2003009199",
      "sh2006000287",
      "sh85093255",
      "sh85006703",
      "sh87000460",
      "sh85139611",
      "sh85144346",
      "sh86001404",
      "sh2013001302",
      "sh2009004470",
    ],
    "pL": "Archaeology",
    "rt": Array [
      "sh85005757",
    ],
    "uri": "sh85006507",
  },
]
`;

exports[`Snapshot of JSON parsing logic Archaeology.json 2`] = `Array []`;

exports[`Snapshot of JSON parsing logic Archaeology.json 3`] = `
Object {
  "sh85006507": "Archaeology",
}
`;

exports[`Snapshot of JSON parsing logic History.json 1`] = `
Array [
  Object {
    "lcc": "D5-D5.5",
    "note": "Here are entered collections of documents, records, etc. upon which narrative history is based.",
    "nt": Array [
      "sh85038194",
      "sh85135408",
      "sh85006913",
      "sh2003003039",
      "sh85022719",
    ],
    "pL": "History--Sources",
    "uri": "sh85061227",
  },
]
`;

exports[`Snapshot of JSON parsing logic History.json 2`] = `Array []`;

exports[`Snapshot of JSON parsing logic History.json 3`] = `
Object {
  "sh85061227": "History--Sources",
}
`;

exports[`Snapshot of JSON parsing logic History-subdiv.json 1`] = `Array []`;

exports[`Snapshot of JSON parsing logic History-subdiv.json 2`] = `
Array [
  Object {
    "aL": "Frontier troubles",
    "note": "Use as a topical subdivision under names of countries, cities, etc., and individual corporate bodies, uniform titles of sacred works, and under classes of persons, ethnic groups, and topical headings.",
    "nt": Array [
      "sh85123948",
      "sh89003666",
      "sh00006055",
      "sh2005003729",
      "sh99014676",
      "sh85074517",
      "sh85038418",
      "sh00006054",
      "sh85085207",
      "sh2014001466",
      "sh99005617",
      "sh85033502",
      "sh85006507",
      "sh2005000301",
      "sh00006030",
      "sh2002012516",
      "sh00004047",
      "sh2008009851",
      "sh85064459",
      "sh85100124",
      "sh00005863",
      "sh85124029",
      "sh91002236",
      "sh85061115",
      "sh00005861",
      "sh85120563",
      "sh85093255",
      "sh00006053",
      "sh85007960",
      "sh85085072",
      "sh99004871",
      "sh85061208",
      "sh85088131",
      "sh85038194",
      "sh85025619",
      "sh85031326",
      "sh99005577",
      "sh85038179",
      "sh99005684",
      "sh85050144",
      "sh85081954",
      "sh85006513",
      "sh2007008610",
      "sh85090384",
      "sh85148201",
      "sh85014152",
      "sh00005865",
      "sh2018001286",
      "sh85012434",
      "sh85107780",
      "sh99005023",
      "sh85077565",
      "sh98002432",
      "sh85103033",
      "sh85133488",
      "sh85053742",
      "sh85006887",
      "sh85119320",
      "sh85113507",
      "sh85031299",
      "sh88002668",
      "sh85113275",
      "sh85108672",
      "sh88004498",
      "sh85114172",
    ],
    "pL": "History",
    "uri": "sh99005024",
  },
]
`;

exports[`Snapshot of JSON parsing logic History-subdiv.json 3`] = `
Object {
  "sh99005024": "History",
}
`;

exports[`Snapshot of JSON parsing logic Obsidian.json 1`] = `
Array [
  Object {
    "bt": Array [
      "Volcanic ash, tuff, etc.",
    ],
    "lcc": "QE462.O28",
    "pL": "Obsidian",
    "uri": "sh85093752",
  },
]
`;

exports[`Snapshot of JSON parsing logic Obsidian.json 2`] = `Array []`;

exports[`Snapshot of JSON parsing logic Obsidian.json 3`] = `
Object {
  "sh85093752": "Obsidian",
}
`;
